--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
              <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
              <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-             <script type="text/javascript" src="slick/slick.min.js"></script>
+             <script type="text/javascript" src="slick.min.js"></script>
         <script>
              $(document).ready(function(){
              $('.slick-container').slick({
