--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			    </div>
 
 		        <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-6">
-                     <!--<div class="img-bloc cont-4"><img src="images/2.png" alt="">
+                     <!--<div class="img-bloc cont-4"><img src="2.png" alt="">
                            <h3>блок 4</h3>
                      </div>-->
 				
@@ -120,7 +120,7 @@
         <script>
              $(document).ready(function(){
              $('.slick-container').slick({
-             slidesToShow: 1,
+             slidesToShow: 5,
 	         autoplay:true,
              });
              });
