--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
          <meta charset="utf-8"/>
          <meta name="viewport" content="width=device-width, initial-scale=1">
-         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/CSS/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 				
          <link rel="stylesheet" type="text/css" href="slick.css">
          <!--// Add the new slick-theme.css if you want the default styling//-->
@@ -41,10 +41,10 @@
                              <li><a href="https://osvitoria.media/experience/8-interaktyvnyh-suchasnyh-igor-yaki-pozhvavlyat-urok/?fbclid=IwAR0_7avVllZKk976jPKvY71j0lu7rPLoSlbL26CL9IV_eS6KevHN-IwTehc">8 інтерактивних сучасних ігор, які пожвавлять урок</a></li>
                              <li><a href="https://osvitoria.media/experience/4-praktychnyh-gry-pro-tolerantnist-i-prava-lyudyny/">4 практичні гри про толерантність і права людини</a></li>
                              <li><a href="https://naurok.com.ua/post/chomu-diti-breshut-ta-scho-z-cim-robiti">Поради батькам</a></li>
-			            </nav>    
+		        </nav>    
                     </div>
-			    </div>			
-			
+	    </div>			
+	
                 <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-3">
                     <div class="img-bloc"><img src="1.png" alt="">
                           <h3>блок 2</h3>
