--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <!--// Add the new slick-theme.css if you want the default styling//-->
          <link rel="stylesheet" type="text/css" href="slick-theme.css">
 		 <link rel="stylesheet" href="style1.css">
-         <title>  проект  </title>
+         <title>  Проект  </title>
  
     </head>
     <body>
@@ -20,8 +20,8 @@
 		
 		            <div class="col-12 header"> 
 			            <div class="img-bloc cont-1"><img src="3.png" alt="">
-                         <h3>  2-2 клас     </h3>
-                        </div>
+                                        <h3>  2-2 клас     </h3>
+                                      </div>
 			 
 			        </div>
 		
